# fitness-coach-agent

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
data/: current_user.txt
data/macro_plans/: macro_cf4caba2_macro_20250605_160717.json  macro_cf4caba2_macro_20250605_162408.json  macro_cf4caba2_macro_20250605_162719.json  macro_cf4caba2_macro_20250605_162859.json  macro_cf4caba2_macro_20250605_163012.json
data/profiles/: profile_cf4caba2.json
data/schedules/: schedule_cf4caba2_week_20250605_164714.json  schedule_cf4caba2_week_20250605_165340.json
src/fitness_coach/: __init__.py
src/fitness_coach/agents/: __init__.py  base.py  feedback.py  feedback_processor.py  macro_planner.py  micro_planner.py  motivation.py  profile_manager.py  progress.py  routine_generation.py  schedule_optimizer.py  user_input.py
src/fitness_coach/config/: settings.py
src/fitness_coach/core/: __init__.py  coach.py  graph.py  state.py
src/fitness_coach/integrations/: __init__.py  google_calendar.py
src/fitness_coach/llm/: providers.py
src/fitness_coach/storage/: __init__.py  persistence.py
src/fitness_coach/ui/: __init__.py  streamlit_app.py
